--- a/requirements.txt
+++ b/requirements.txt
@@ -98,6 +98,7 @@ pyparsing==3.1.1
 pyrsistent==0.20.0
 python-crfsuite==0.9.9
 python-dateutil==2.8.2
+python-dotenv==1.0.1
 pytz==2022.7.1
 PyYAML==6.0.1
 questionary==1.10.0
